--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
       <div class="sidebar-link">
         <a href="experience.html" target="_blank">Experience</a>
       </div>
-      <div class="sidebar-link">Education</div>
+      <div class="sidebar-link">
+        <a href="education.html" target="-blank">Education</a>
+      </div>
     </nav>
 
   <div>
